2.0.0
Fixed segfault when closing open file dialog from wm.
Removed unneeded prefs from term plug.
Fixed term plug open file with spaces.
Term plug scroll bar can now be dragged/scrolled with left button.
Added back/fore colours to terminal plug settings.
Fixed not showing completions.
Removed unneeded terminal plugin menu items.
Moved from using 3rd party qtermwidget to xterm.
Fixed trying to go foward with nothing to go forward to.
Fixed importing from PDF.
Fixed replacing text when running external tool.
Fixed 'Open in src file' in doc viewer.
Fixed occasional crash when repeatedly restoring sessions with large files >~4000.
Fixed segfault when saving session.
Fixed memory leaks.
Corrected widget parent errors.
Fixed various mem leaks.
Fixed aspell mem leak.
Fixed not shutting docwindow and quiting when close selected from wm.
Fixed opening include file from Navigation menu when extra characters ( comments ) are after the closing '>'.
Fixed about box text.
Fixed segfault at start.
Removed dep on QWebEngine* from plugins.
No longer supports Qt5.
No longer supports QWebEngine for viewing doc's ( too heavy ).

1.6.3
Activate main window when opening file from favourites.
Activate main window when going to definition from doc viewer.
Open Link In Source File in docviewer now works much better.
Added copy text to docviewer context menu.
Fixed updating docviewer.
Setting an image type in the dialog box when building docs will enable images, else no images built.
Removed images from documentation.
Code clean.
Fixed spell check.
Sped up definition search.
Fixed plugin help.
Fixed trying to show non existent page in viewer.
Added Show docs to doc plugin.
Fixed docset with spaces in name.
Removed JavaScript search when building doxygen documentation.
Moved documentation to documentation plugin.
Fixed trying to show/raise doc viewer before 1st use.